test/libsolidity/syntaxTests/parsing/user_defined_value_type_err.sol
type(MyInt) is uint256;
// ----
// ParserError 2314: (4-5): Expected identifier but got '('
